upload/social-network-deploy-2022-worst/k8s-yaml/url-shorten-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: url-shorten-service
  labels:
    version: v1
    app: url-shorten-service
  namespace: social-network
spec:
  ports:
  - port: 9090
    name: tcp
  selector:
    version: v1
    app: url-shorten-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
  name: url-shorten-service
  labels:
    version: v1
    app: url-shorten-service
  namespace: social-network
spec:
  replicas: 1
  selector:
    matchLabels:
      version: v1
      app: url-shorten-service
  template:
    metadata:
      annotations:
        io.cilium.proxy-visibility: "<Egress/9090/TCP/HTTP>,<Egress/6379/TCP/REDIS>,<Egress/11211/TCP/MEMCACHED>,<Egress/27107/TCP/MONGODB>,<Egress/5672/TCP/RABBITMQ>,<Ingress/9090/TCP/HTTP>,<Ingress/6379/TCP/REDIS>,<Ingress/11211/TCP/MEMCACHED>,<Ingress/27017/TCP/MONGODB>,<Ingress/5672/TCP/RABBITMQ>"

      labels: 
        version: v1
        app: url-shorten-service
      name: url-shorten-service
    spec:
      nodeSelector:
        location: cloud
      containers:
      - name: url-shorten-service
        image: khchow/social-network:2022
        command: ["UrlShortenService"]
      restartPolicy: Always
      # nodeName: 10.0.0.13
      # schedulerName: poseidon
