upload/social-network-deploy-2022-worst/k8s-yaml/user-timeline-mongodb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: user-timeline-mongodb
  labels:
    version: v1
    app: user-timeline-mongodb
  namespace: social-network
spec:
  ports:
  - port: 27017
    name: mongo
  selector:
    version: v1
    app: user-timeline-mongodb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
  name: user-timeline-mongodb
  labels:
    version: v1
    app: user-timeline-mongodb
  namespace: social-network
spec:
  replicas: 1
  selector:
    matchLabels:
      version: v1
      app: user-timeline-mongodb
  template:
    metadata:
      annotations:
        io.cilium.proxy-visibility: "<Egress/9090/TCP/HTTP>,<Egress/6379/TCP/REDIS>,<Egress/11211/TCP/MEMCACHED>,<Egress/27107/TCP/MONGODB>,<Egress/5672/TCP/RABBITMQ>,<Ingress/9090/TCP/HTTP>,<Ingress/6379/TCP/REDIS>,<Ingress/11211/TCP/MEMCACHED>,<Ingress/27017/TCP/MONGODB>,<Ingress/5672/TCP/RABBITMQ>"

      labels: 
        version: v1
        app: user-timeline-mongodb
      name: user-timeline-mongodb
    spec:
      nodeSelector:
        location: cloud
      containers:
      - name: user-timeline-mongodb
        image: poanpan/mongo:v1
        args: ["--wiredTigerCacheSizeGB=1.0"]
      restartPolicy: Always
