upload/social-network-deploy-2022-worst/k8s-yaml/user-timeline-redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: user-timeline-redis
  labels:
    version: v1
    app: user-timeline-redis
  namespace: social-network
spec:
  ports:
  - port: 6379
    name: redis
  selector:
    version: v1
    app: user-timeline-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
  name: user-timeline-redis
  labels:
    version: v1
    app: user-timeline-redis
  namespace: social-network
spec:
  replicas: 1
  selector:
    matchLabels:
      version: v1
      app: user-timeline-redis
  template:
    metadata:
      annotations:
        io.cilium.proxy-visibility: "<Egress/9090/TCP/HTTP>,<Egress/6379/TCP/REDIS>,<Egress/11211/TCP/MEMCACHED>,<Egress/27107/TCP/MONGODB>,<Egress/5672/TCP/RABBITMQ>,<Ingress/9090/TCP/HTTP>,<Ingress/6379/TCP/REDIS>,<Ingress/11211/TCP/MEMCACHED>,<Ingress/27017/TCP/MONGODB>,<Ingress/5672/TCP/RABBITMQ>"

      labels: 
        version: v1
        app: user-timeline-redis
      name: user-timeline-redis
    spec:
      nodeSelector:
        location: cloud
      containers:
      - name: user-timeline-redis
        image: redis:alpine
        command:
        - redis-server
        - "/redis-master/redis.conf"
        volumeMounts:
        - name: config
          mountPath: /redis-master
      restartPolicy: Always
      volumes:
      - name: config
        configMap:
          name: user-timeline-redis-config
          items:
          - key: redis-config
            path: redis.conf
      # nodeName: 10.0.0.13
      # schedulerName: poseidon
